@@ -66,6 +66,7 @@ Fixes:
    unevaluated input. Reported by Ingwaz. [MG]
  * repeat() could write partial ANSI tags, causing buffer overflows. From a
    report by Ashen-Shugar. [MG]
+ * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
 
 Version 1.8.5 patchlevel 3                                 Aug 23, 2012
 
